--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,7 +7,7 @@
     tools:context=".controller.CadastroActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/novo_anuncio_titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="118dp"
@@ -35,7 +35,7 @@
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/novo_anuncio_titulo"
         tools:ignore="TextContrastCheck" />
 
     <TextView
