--- a/app/src/main/res/layout/activity_novo_anuncio.xml
+++ b/app/src/main/res/layout/activity_novo_anuncio.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/novo_anuncio_titulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/novo_an_ncio"
